--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link src="https://fonts.googleapis.com/css?family=Raleway:100,100i,400,400i,800,800i&display=swap">
+  <link src="https://fonts.googleapis.com/css?family=Raleway:100,100i,400i&display=swap">
   <title>My ToDo List</title>
 </head>
 <body>
